# miko_token

./: .env.example  .gitignore  ARCHITECTURE.md  Anchor.toml  CLAUDE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_STATUS.md  DEVNET_TESTING_GUIDE.md  DEVNET_TEST_RESULTS.md  EXCLUSIONS_USAGE_GUIDE.md  FINAL_DEPLOYMENT_STATUS.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_LIQUIDITY_PARAMS.md  PHASE2_PROBLEM.md  PLAN.md  PROJECT_STATUS.md  QUICK_TEST_COMMANDS.md  README.md  STOP_CONDITIONS.md  TAX_FLOW_ERROR_SOLUTION.md  TO_DO.md  Testing_Dynamic_Eligibility_on_Devnet.md  Testing_Swap_Functionality_on_Devnet.md  VERIFICATION_GUIDE.md  birdeye_price.md  cpmm_wsol_fix.md  docker-compose.yml  initialization-pending.json  keeper-bot-wallet.json  miko-authority-structure.md  miko-phase2-solution.md  miko-token-backend.md  miko-token-config.json  owner-wallet.json  package.json  phase3-solution_2.md  phase3_solution.md  (+13 more)
backup/keeper-bot/: .gitignore  tsconfig.json
backup/programs/: Cargo.toml
backup/programs/programs/absolute-vault/: Cargo.toml
backup/scripts/: check-smart-dial-state.ts  initialize-smart-dial.ts  phase3-comprehensive-test.ts  update-smart-dial-treasury.ts  vc3-auth-sync-verification.ts
config/: miko-token.json
docker/phase1/: Dockerfile  PHASE1_DOCUMENTATION.md  docker-compose.yml
docker/phase1-programs/: Dockerfile
docker/phase2/: Dockerfile  docker-compose.yml
docker/phase2-token/: Dockerfile
docker/phase3-init/: Dockerfile
docker/phase4-keeper/: Dockerfile
docker/shared-artifacts/: CRITICAL_DEPLOYER_INFO.md  README.md  miko-token-info.json  programs.json  token-info.json
docs/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_PRODUCTION.md  DEPLOYMENT_TEST.md  OPERATIONS_GUIDE.md  TESTING_DYNAMIC_ELIGIBILITY_ON_DEVNET.md  TESTING_SWAP_FUNCTIONALITY_ON_DEVNET.md
final-deployment/: Anchor.toml  Cargo.toml  package.json  test-validator.pid  tsconfig.json  verify-authorities.ts
final-deployment/config/: deployment-state.json  environment.json  mint-revocation-record.json
final-deployment/idl/: absolute_vault.json  smart_dial.json
final-deployment/keeper-bot/: .env.example  package.json  tsconfig.json
final-deployment/scripts/: add-liquidity.ts  config-manager.d.ts  config-manager.d.ts.map  config-manager.js  config-manager.js.map  config-manager.ts  create-pool.ts  create-token.ts  deploy-programs.ts  generate-keypairs.ts  initialize-smart-dial.ts  initialize-vault.ts  revoke-mint-authority.ts  transfer-authorities.ts  withdraw-pool-fees.ts
final-deployment/test/: create-test-pool.ts  generate-swap-activity.ts  test-wallets.json
keeper-bot/: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  jest.config.js  package.json  tsconfig.json
keeper-bot/config/: mock_config.toml
keeper-bot/src/: KeeperBot.ts  index.ts  main.ts
keeper-bot/tests/: setup.ts
miko-token/: Anchor.toml
miko-token/tests/: miko-token.js
programs/: Anchor.toml  package-lock.json
programs/absolute-vault/: Cargo.toml
programs/absolute-vault/src/: constants.rs  errors.rs  lib.rs
programs/absolute-vault/src/instructions/: check_exemption.rs  collect_and_distribute.rs  distribute.rs  distribute_rewards.rs  emergency_withdraw_vault.rs  emergency_withdraw_withheld.rs  harvest_fees.rs  initialize.rs  initialize_registry.rs  initialize_vault.rs  manage_exclusions.rs  mod.rs  process_tax.rs  update_config.rs  update_holders.rs
programs/absolute-vault/src/state/: config.rs  exclusion_entry.rs  exclusions.rs  holder_registry.rs  mod.rs  vault_state.rs
programs/absolute-vault/tests/: absolute_vault_tests.rs
programs/miko-transfer/: Cargo.toml
programs/programs/absolute-vault/: Cargo.toml
programs/programs/absolute-vault/src/: lib.rs
programs/programs/smart-dial/: Cargo.toml
programs/programs/smart-dial/src/: lib.rs
programs/programs/transfer-hook/: Cargo.toml
programs/programs/transfer-hook/src/: lib.rs
programs/smart-dial/: Cargo.toml
programs/smart-dial/src/: constants.rs  errors.rs  lib.rs
programs/smart-dial/src/instructions/: get_config.rs  initialize.rs  mod.rs  update_reward.rs  update_reward_token.rs  update_treasury.rs  update_wallets.rs
programs/smart-dial/src/state/: config.rs  dial_state.rs  mod.rs  update_record.rs
programs/tests/: miko_programs.ts
scripts/: absolute-vault-idl.json  add-exclusions.ts  add-reward-exclusion.ts  add-tax-exemption.ts  build.sh  burn-mint-authority.js  calculate-discriminator.js  calculate-pdas.ts  check-and-mint-token.js  check-state.js  check-token-distribution.ts  check-token-status.js  create-miko-dev-token.ts  create-miko-token-corrected.js  create-miko-token.js  create-miko-token.ts  create-owner-ata.js  create-project-wallets.ts  create-token.js  create-token.ts  debug-test.js  deploy-programs-direct.sh  deploy-programs.sh  deploy-programs.ts  deploy-smart-dial.sh  deploy-with-retry.js  deploy_with_retry.sh  devnet-test-suite.ts  distribute-test-tokens.ts  fix-program-deployment.ts  generate-test-transactions.js  harvest-fees.js  init-absolute-vault-fixed.js  init-absolute-vault-fixed.ts  init-absolute-vault-raw.ts  init-absolute-vault-with-token.js  init-absolute-vault.js  init-absolute-vault.ts  init-direct.js  init-exclusions.ts  (+54 more)
scripts/phase3/: calculate-pdas.ts  initialize-vault.ts
scripts/phase4b/: CLEANUP_PLAN.md  DEPLOYMENT_ORGANIZATION.md  README.md  add-liquidity-to-pool.ts  calculate-pdas.ts  check-alt-accounts.ts  check-deployer-balance.ts  clone-alt-dynamic.ts  complete-phase4b-setup.sh  config-manager.ts  (+31 more)
scripts/phase4b/phase4b-programs-old-deployment/programs/smart-dial/: Cargo.toml
scripts/phase4b/phase4b-programs-old-deployment/programs/smart-dial/src/: lib.rs
test/: .env.test.example  BUILD_AND_TEST_GUIDE.md  DEVNET_TESTING_GUIDE.md  Dockerfile.test  README.md  TEST_README.md  TEST_RESULTS.md  TEST_RESULTS_TEMPLATE.md  TEST_SUMMARY.md  docker-compose.test.yml  keeper-key.txt  owner-wallet.json  package.json  test-wallet.json  treasury-wallet.json  tsconfig.json
tests/: absolute-vault.ts  smart-dial.ts
(+213 files in other folders)
