[package]
name = "absolute-vault"
version = "0.1.0"
description = "Core tax collection and distribution logic for MIKO token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "absolute_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "3.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
solana-program-test = "1.18.16"
solana-sdk = "1.18.16"

# The [patch.crates-io] section resolves the known compatibility conflicts.
# It forces Cargo to use specific versions from Solana's official Git repository
# instead of the default crates.io versions, ensuring compatibility with Anchor 0.31.1+
# and Solana 1.18.x. This directly fixes the "yanked" version errors.
[patch.crates-io]
solana-program-test = { git = "https://github.com/solana-labs/solana.git", rev = "v1.18.16" }
solana-program = { git = "https://github.com/solana-labs/solana.git", rev = "v1.18.16" }
solana-sdk = { git = "https://github.com/solana-labs/solana.git", rev = "v1.18.16" }
solana-client = { git = "https://github.com/solana-labs/solana.git", rev = "v1.18.16" }
solana-logger = { git = "https://github.com/solana-labs/solana.git", rev = "v1.18.16" }
solana-remote-wallet = { git = "https://github.com/solana-labs/solana.git", rev = "v1.18.16" }
solana-sdk-macro = { git = "https://github.com/solana-labs/solana.git", rev = "v1.18.16" }
solana-vote-program = { git = "https://github.com/solana-labs/solana.git", rev = "v1.18.16" }