[package]
name = "absolute-vault"
version = "0.1.0"
description = "Core tax collection and distribution logic for MIKO token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "absolute_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
solana-program = "=1.18.26"
spl-token = { version = "=4.0.3", features = ["no-entrypoint"] }
spl-token-2022 = { version = "=3.0.2", features = ["no-entrypoint"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }