[package]
name = "smart-dial"
version = "0.1.0"
description = "Reward token configuration for MIKO"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smart_dial"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"