[package]
name = "smart-dial"
version = "0.1.0"
description = "Reward token configuration storage for MIKO token system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smart_dial"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }

[dev-dependencies]
anchor-client = "0.31.1"