[package]
name = "absolute-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "absolute_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "^0.30.0"
anchor-spl = { version = "^0.30.0", features = ["token_2022"] }
spl-token-2022 = { version = "0.9", features = ["no-entrypoint"] }

# Explicit versions to resolve IDL generation issue
proc-macro2 = "1.0.69"
syn = { version = "1.0.109", features = ["full"] }
