[package]
name = "smart-dial"
version = "0.1.0"
description = "MIKO Token Smart Dial for AI-driven reward token selection"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smart_dial"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
spl-token-2022 = { version = "0.9", features = ["no-entrypoint"] }
