[package]
name = "transfer-hook"
version = "0.1.0"
description = "MIKO Token Transfer Hook for Anti-Sniper Protection"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "^0.30.0"
anchor-spl = { version = "^0.30.0", features = ["token_2022"] }
spl-token-2022 = { version = "0.9", features = ["no-entrypoint"] }
spl-transfer-hook-interface = { version = "0.6" }
spl-tlv-account-resolution = { version = "0.6" }
