[package]
name = "transfer-hook"
version = "0.1.0"
description = "MIKO Token Transfer Hook Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"
spl-discriminator = "0.4.1"

[dev-dependencies]
solana-program-test = "2.1.3"
solana-sdk = "2.1.3"
