[package]
name = "absolute-vault"
version = "0.1.0"
description = "MIKO Token Absolute Vault Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "absolute_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "2.1.3"
solana-sdk = "2.1.3"
