[package]
name = "smart-dial"
version = "0.1.0"
description = "MIKO Token Smart Dial Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smart_dial"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[dev-dependencies]
solana-program-test = "2.1.3"
solana-sdk = "2.1.3"
